classDiagram
    direction TB

    class BootstrapPayload {
        <<interface>>
    }
    class Product {
        <<interface>>
    }
    class ProductSet {
        <<interface>>
    }
    class Review {
        <<interface>>
    }
    class ExternalLinks {
        <<interface>>
    }
    class Filters {
        <<interface>>
    }
    class ProductStatus {
        <<enumeration>>
    }
    class SetProduct {
        <<interface>>
    }
    class SetDiscount {
        <<interface>>
    }

    BootstrapPayload --> Product       : products[]
    BootstrapPayload --> Review        : reviews[]
    BootstrapPayload --> ExternalLinks : links
    Product          --> ProductStatus : status
    Product          --> SetDiscount   : setDiscounts[]
    ProductSet       --> Product       : включает
    ProductSet       --> SetProduct    : products[]
